--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
     ports:
       - "3035:3035"
   db:
+    platform: linux/x86_64
     image: mysql:8.0
     container_name: docker-db-service
     environment:
